fix: prevent iOS app switcher from overlapping `Navigation`

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -125,3 +125,11 @@
         }
     }
 }
+
+.pwa .nav {
+    &__link {
+        @media screen and (max-width: $breakpoint-md) {
+            margin-bottom: 1.5rem;
+        }
+    }
+}
